# tactile-ball-robot

./: .gitignore  README.md
assets/: data_examples
assets/data/: data_examples.csv  predictions.csv  truth.csv
ball-gym/: MUJOCO_LOG.TXT  pyproject.toml
ball-gym/examples/: keyboard_control.py  record.py
ball-gym/examples/rig_work/: data_gather.py  mover.py  mover_example.py
ball-gym/src/mujoco_tactile_ball/assets/: blocks.xml  flat.xml  maze.xml  move.xml  quicktest.py  terrain.xml
ball-gym/src/mujoco_tactile_ball/assets/objects/: convert.py  z0_surface.stl  z1_surface.stl  z2_surface.stl  z3_surface.stl  z4_surface.stl  z5_surface.stl
ball-gym/src/mujoco_tactile_ball/assets/robot/: actuator.xml  asset.xml  equality.xml  mainbody.xml  sensor.xml  tendon.xml  terrain.xml  worldbody.xml
ball-gym/src/mujoco_tactile_ball/assets/robot/jump/: test.py  test.xml
ball-gym/src/mujoco_tactile_ball/assets/robot/left_wheel/: asset.xml  deformable.xml  equality.xml  generated.xml  tendon.xml  worldbody.xml
ball-gym/src/mujoco_tactile_ball/assets/robot/right_wheel/: asset.xml  deformable.xml  equality.xml  generated.xml  tendon.xml  worldbody.xml
ball-gym/src/mujoco_tactile_ball/envs/: __init__.py  base.py  envs.py  flat.py  generate_random.py
experiments/simulated/: classifier.ipynb
generate_robot/: generaton.py
