[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tactile-ball"
version = "0.1.0"
description = "Gym environment for the tactile ball robot"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Dexter Shepherd"}
]
dependencies = [
    "numpy>=2.0",
    "torch>=2.7",
    "opencv-python>=4.10",
    "mujoco",
    "gymnasium"

]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]